--- a/activity3.html
+++ b/activity3.html
@@ -143,6 +143,13 @@
       padding: 24px 32px;
     }
 
+    /* Header styles */
+    @media (min-width: 768px) {
+      .md\\:flex {
+        display: flex !important;
+      }
+    }
+
     /* Header */
     .header {
       display: flex;
@@ -469,7 +476,7 @@
         <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
           <path stroke-linecap="round" stroke-linejoin="round" d="M11 5.882V19.24a1.76 1.76 0 01-3.417.592l-2.147-6.15M18 13a3 3 0 100-6M5.436 13.683A4.001 4.001 0 017 6h1.832c4.1 0 7.625-1.234 9.168-3v14c-1.543-1.766-5.067-3-9.168-3H7a3.988 3.988 0 01-1.564-.317z"/>
         </svg>
-        Campaigns
+        Newsletters
       </a>
       <a href="#" class="nav-item">
         <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -511,32 +518,117 @@
 
   <!-- Main Content -->
   <main class="main-content">
-    <!-- Header -->
-    <header class="header">
-      <h1 class="page-title">Collection</h1>
-      <div class="header-actions">
-        <button class="header-icon-btn">
-          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <circle cx="11" cy="11" r="8"/>
-            <path d="M21 21l-4.35-4.35"/>
+    <!-- Header Desktop -->
+    <div style="display: none;" class="md:flex items-center justify-between gap-4 mb-8">
+      <div style="position: relative; flex: 1; max-width: 672px;">
+        <span style="position: absolute; left: 16px; top: 50%; transform: translateY(-50%); color: var(--text-secondary);">
+          <svg width="20" height="20" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.35-4.35M11 19a8 8 0 100-16 8 8 0 000 16z"/>
+          </svg>
+        </span>
+        <input
+          type="text"
+          placeholder="Rechercher une campagne, un contact ou un template"
+          style="width: 100%; height: 56px; background: #e8eaec; border: 1px solid #e6e8ec; border-radius: 18px; padding-left: 56px; padding-right: 20px; font-size: 14px; color: var(--text-primary); outline: none; box-shadow: 0 14px 45px -26px rgba(20,20,22,0.65);"
+        >
+      </div>
+
+      <div style="display: flex; align-items: center; gap: 12px;">
+        <button style="width: 44px; height: 44px; border-radius: 16px; background: white; border: 1px solid var(--border-color); display: flex; align-items: center; justify-content: center; color: var(--text-primary); transition: transform 0.2s ease;">
+          <svg width="20" height="20" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h10M4 18h7"/>
           </svg>
         </button>
-        <button class="header-icon-btn">
-          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"/>
-            <path d="M13.73 21a2 2 0 0 1-3.46 0"/>
-          </svg>
-          <span class="notification-dot"></span>
-        </button>
-        <div class="user-profile">
-          <div class="user-avatar"></div>
-          <span class="user-name">Alesia K.</span>
-          <svg class="user-dropdown-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <polyline points="6 9 12 15 18 9"/>
+
+        <div style="position: relative;">
+          <button id="notif-toggle" style="width: 44px; height: 44px; border-radius: 16px; background: white; border: 1px solid var(--border-color); display: flex; align-items: center; justify-content: center; color: var(--text-primary); transition: transform 0.2s ease; position: relative;">
+            <svg width="20" height="20" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6 6 0 00-5-5.916V4a1 1 0 10-2 0v1.084A6 6 0 006 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"/>
+            </svg>
+            <span style="position: absolute; top: -4px; right: -4px; width: 12px; height: 12px; border-radius: 50%; background: var(--accent-green); border: 2px solid white;"></span>
+          </button>
+
+          <!-- Notification popup -->
+          <div id="notif-panel" style="display: none; position: absolute; right: 0; margin-top: 12px; width: 380px; background: white; border-radius: 16px; box-shadow: 0 25px 50px -12px rgba(0,0,0,0.25); border: 1px solid rgba(226,226,226,0.7); z-index: 20;">
+            <div style="display: flex; align-items: center; justify-content: space-between; padding: 20px; border-bottom: 1px solid rgba(226,226,226,0.7);">
+              <div style="font-weight: 600; color: var(--text-primary);">Notifications</div>
+              <button style="font-size: 14px; color: var(--text-secondary); font-weight: 500;">Tout marquer comme lu</button>
+            </div>
+            <div style="max-height: 420px; overflow-y: auto;">
+              <div style="display: flex; align-items: flex-start; gap: 12px; padding: 20px; border-bottom: 1px solid rgba(226,226,226,0.6);">
+                <span style="color: var(--accent-green); margin-top: 4px;">
+                  <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/></svg>
+                </span>
+                <div style="flex: 1;">
+                  <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 4px;">
+                    <p style="font-size: 14px; font-weight: 600; color: var(--text-primary);">Ouverture en hausse</p>
+                    <span style="font-size: 11px; color: var(--text-secondary);">09 Oct 2022, 11:30</span>
+                  </div>
+                  <p style="font-size: 14px; color: var(--text-secondary); margin-bottom: 8px;">Newsletter "Welcome series" a atteint 52% d'ouverture.</p>
+                  <button style="font-size: 12px; color: var(--text-primary); font-weight: 600; border: 1px solid var(--border-color); padding: 4px 12px; border-radius: 6px;">Voir le dashboard</button>
+                </div>
+              </div>
+
+              <div style="display: flex; align-items: flex-start; gap: 12px; padding: 20px; border-bottom: 1px solid rgba(226,226,226,0.6);">
+                <span style="color: var(--text-primary); margin-top: 4px;">
+                  <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2l3 7h7l-5.5 4.5 2 7L12 16l-6.5 4.5 2-7L2 9h7z"/></svg>
+                </span>
+                <div style="flex: 1;">
+                  <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 4px;">
+                    <p style="font-size: 14px; font-weight: 600; color: var(--text-primary);">Nouveau lead importé</p>
+                    <span style="font-size: 11px; color: var(--text-secondary);">07 Oct 2022, 10:30</span>
+                  </div>
+                  <p style="font-size: 14px; color: var(--text-secondary); margin-bottom: 8px;">1 250 contacts ajoutés à "Clients Pro".</p>
+                  <span style="display: inline-flex; align-items: center; gap: 4px; font-size: 12px; color: var(--text-primary); font-weight: 600; background: rgba(20,20,22,0.05); padding: 4px 12px; border-radius: 6px;">Listes</span>
+                </div>
+              </div>
+
+              <div style="display: flex; align-items: flex-start; gap: 12px; padding: 20px; border-bottom: 1px solid rgba(226,226,226,0.6);">
+                <span style="color: var(--accent-green); margin-top: 4px;">
+                  <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/></svg>
+                </span>
+                <div style="flex: 1;">
+                  <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 4px;">
+                    <p style="font-size: 14px; font-weight: 600; color: var(--text-primary);">Template approuvé</p>
+                    <span style="font-size: 11px; color: var(--text-secondary);">06 Oct 2022, 23:44</span>
+                  </div>
+                  <p style="font-size: 14px; color: var(--text-secondary); margin-bottom: 8px;">"Offre d'automne" est prêt à l'envoi.</p>
+                  <button style="font-size: 12px; color: var(--text-primary); font-weight: 600; border: 1px solid var(--border-color); padding: 4px 12px; border-radius: 6px;">Lancer une campagne</button>
+                </div>
+              </div>
+
+              <div style="display: flex; align-items: flex-start; gap: 12px; padding: 20px;">
+                <span style="color: var(--text-primary); margin-top: 4px;">
+                  <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2l3 7h7l-5.5 4.5 2 7L12 16l-6.5 4.5 2-7L2 9h7z"/></svg>
+                </span>
+                <div style="flex: 1;">
+                  <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 4px;">
+                    <p style="font-size: 14px; font-weight: 600; color: var(--text-primary);">Routine automatisée</p>
+                    <span style="font-size: 11px; color: var(--text-secondary);">05 Oct 2022, 14:17</span>
+                  </div>
+                  <p style="font-size: 14px; color: var(--text-secondary); margin-bottom: 8px;">Workflow "Onboarding" a envoyé 238 emails.</p>
+                  <span style="display: inline-flex; align-items: center; gap: 4px; font-size: 12px; color: var(--text-primary); font-weight: 600; background: rgba(20,20,22,0.05); padding: 4px 12px; border-radius: 6px;">Automations</span>
+                </div>
+              </div>
+            </div>
+            <div style="padding: 20px; border-top: 1px solid rgba(226,226,226,0.7); font-size: 14px; color: var(--text-primary); font-weight: 600; cursor: pointer; transition: background-color 0.2s ease;">
+              Voir toutes les notifications
+            </div>
+          </div>
+        </div>
+
+        <div style="display: flex; align-items: center; gap: 12px; background: white; border: 1px solid var(--border-color); border-radius: 16px; padding: 8px 12px;">
+          <div style="width: 40px; height: 40px; border-radius: 16px; background: var(--accent-dark); color: white; display: flex; align-items: center; justify-content: center; font-weight: bold;">AK</div>
+          <div>
+            <p style="font-size: 14px; font-weight: 600; line-height: 1.2; margin: 0;">Alesia K.</p>
+            <p style="font-size: 12px; color: var(--text-secondary); margin: 0;">Responsable CRM</p>
+          </div>
+          <svg width="16" height="16" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/>
           </svg>
         </div>
       </div>
-    </header>
+    </div>
 
     <!-- Toolbar -->
     <div class="toolbar">
@@ -809,6 +901,31 @@
       </table>
     </div>
   </main>
+  <script>
+    // Notification toggle functionality
+    const notifToggle = document.getElementById('notif-toggle');
+    const notifPanel = document.getElementById('notif-panel');
+
+    function closeNotif() {
+      if (notifPanel) notifPanel.style.display = 'none';
+    }
+
+    if (notifToggle) {
+      notifToggle.addEventListener('click', (e) => {
+        e.stopPropagation();
+        if (notifPanel) {
+          notifPanel.style.display = notifPanel.style.display === 'none' ? 'block' : 'none';
+        }
+      });
+    }
+
+    document.addEventListener('click', (e) => {
+      if (!notifPanel || !notifToggle) return;
+      if (!notifPanel.contains(e.target) && !notifToggle.contains(e.target)) {
+        closeNotif();
+      }
+    });
+  </script>
 </body>
 </html>
 
