--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5.882V19.24a1.76 1.76 0 01-3.417.592l-2.147-6.15M18 13a3 3 0 100-6M5.436 13.683A4.001 4.001 0 017 6h1.832c4.1 0 7.625-1.234 9.168-3v14c-1.543-1.766-5.067-3-9.168-3H7a3.988 3.988 0 01-1.564-.317z"/>
           </svg>
-          Campaigns
+          Newsletters
         </a>
         <a href="#" class="flex items-center gap-3 px-4 py-3 rounded-xl text-muted hover:text-primary hover:bg-white transition justify-between">
           <div class="flex items-center gap-3">
@@ -121,6 +121,118 @@
         </button>
       </div>
 
+      <!-- Header Desktop -->
+      <div class="hidden md:flex items-center justify-between gap-4 mb-8">
+        <div class="relative flex-1 max-w-4xl">
+          <span class="absolute left-4 top-1/2 -translate-y-1/2 text-muted">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.35-4.35M11 19a8 8 0 100-16 8 8 0 000 16z"/>
+            </svg>
+          </span>
+          <input
+            type="text"
+            placeholder="Rechercher une campagne, un contact ou un template"
+            class="w-full h-14 bg-[#e8eaec] border border-[#e6e8ec] rounded-[18px] pl-14 pr-5 text-sm text-primary placeholder:text-muted shadow-[0_14px_45px_-26px_rgba(20,20,22,0.65)] focus:outline-none focus:border-[#d7d9dd] focus:ring-2 focus:ring-primary/12 transition-colors"
+          >
+        </div>
+
+        <div class="flex items-center gap-3">
+          <button class="w-11 h-11 rounded-2xl bg-white border border-border flex items-center justify-center text-primary hover:-translate-y-0.5 transition shadow-sm">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h10M4 18h7"/>
+            </svg>
+          </button>
+
+          <div class="relative">
+            <button id="notif-toggle" class="w-11 h-11 rounded-2xl bg-white border border-border flex items-center justify-center text-primary hover:-translate-y-0.5 transition shadow-sm relative">
+              <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6 6 0 00-5-5.916V4a1 1 0 10-2 0v1.084A6 6 0 006 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"/>
+              </svg>
+              <span class="absolute -top-1 -right-1 inline-flex w-3 h-3 bg-success rounded-full ring-2 ring-white"></span>
+            </button>
+
+            <!-- Notification popup -->
+            <div id="notif-panel" class="hidden absolute right-0 mt-3 w-[380px] bg-white rounded-2xl shadow-xl border border-border/70 z-20">
+              <div class="flex items-center justify-between px-5 py-4 border-b border-border/70">
+                <div class="font-semibold text-primary">Notifications</div>
+                <button class="text-sm text-muted hover:text-primary font-medium">Tout marquer comme lu</button>
+              </div>
+              <div class="max-h-[420px] overflow-y-auto divide-y divide-border/60">
+                <div class="flex items-start gap-3 px-5 py-4">
+                  <span class="text-success mt-1">
+                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/></svg>
+                  </span>
+                  <div class="flex-1 space-y-1">
+                    <div class="flex items-center justify-between">
+                      <p class="text-sm font-semibold text-primary">Ouverture en hausse</p>
+                      <span class="text-[11px] text-muted">09 Oct 2022, 11:30</span>
+                    </div>
+                    <p class="text-sm text-muted">Newsletter “Welcome series” a atteint 52% d’ouverture.</p>
+                    <button class="text-xs text-primary font-semibold border border-border px-3 py-1 rounded-lg">Voir le dashboard</button>
+                  </div>
+                </div>
+
+                <div class="flex items-start gap-3 px-5 py-4">
+                  <span class="text-primary mt-1">
+                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2l3 7h7l-5.5 4.5 2 7L12 16l-6.5 4.5 2-7L2 9h7z"/></svg>
+                  </span>
+                  <div class="flex-1 space-y-1">
+                    <div class="flex items-center justify-between">
+                      <p class="text-sm font-semibold text-primary">Nouveau lead importé</p>
+                      <span class="text-[11px] text-muted">07 Oct 2022, 10:30</span>
+                    </div>
+                    <p class="text-sm text-muted">1 250 contacts ajoutés à “Clients Pro”.</p>
+                    <span class="inline-flex items-center gap-1 text-xs text-primary font-semibold bg-primary/5 px-3 py-1 rounded-lg">Listes</span>
+                  </div>
+                </div>
+
+                <div class="flex items-start gap-3 px-5 py-4">
+                  <span class="text-success mt-1">
+                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/></svg>
+                  </span>
+                  <div class="flex-1 space-y-1">
+                    <div class="flex items-center justify-between">
+                      <p class="text-sm font-semibold text-primary">Template approuvé</p>
+                      <span class="text-[11px] text-muted">06 Oct 2022, 23:44</span>
+                    </div>
+                    <p class="text-sm text-muted">“Offre d’automne” est prêt à l’envoi.</p>
+                    <button class="text-xs text-primary font-semibold border border-border px-3 py-1 rounded-lg">Lancer une campagne</button>
+                  </div>
+                </div>
+
+                <div class="flex items-start gap-3 px-5 py-4">
+                  <span class="text-primary mt-1">
+                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2l3 7h7l-5.5 4.5 2 7L12 16l-6.5 4.5 2-7L2 9h7z"/></svg>
+                  </span>
+                  <div class="flex-1 space-y-1">
+                    <div class="flex items-center justify-between">
+                      <p class="text-sm font-semibold text-primary">Routine automatisée</p>
+                      <span class="text-[11px] text-muted">05 Oct 2022, 14:17</span>
+                    </div>
+                    <p class="text-sm text-muted">Workflow “Onboarding” a envoyé 238 emails.</p>
+                    <span class="inline-flex items-center gap-1 text-xs text-primary font-semibold bg-primary/5 px-3 py-1 rounded-lg">Automations</span>
+                  </div>
+                </div>
+              </div>
+              <div class="px-5 py-3 border-t border-border/70 text-sm text-primary font-semibold hover:bg-background transition">
+                Voir toutes les notifications
+              </div>
+            </div>
+          </div>
+
+          <div class="flex items-center gap-3 bg-white border border-border rounded-2xl px-3 py-2 shadow-sm">
+            <div class="w-10 h-10 rounded-2xl bg-primary text-white flex items-center justify-center font-bold">AK</div>
+            <div>
+              <p class="text-sm font-semibold leading-tight">Alesia K.</p>
+              <p class="text-xs text-muted">Responsable CRM</p>
+            </div>
+            <svg class="w-4 h-4 text-muted" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/>
+            </svg>
+          </div>
+        </div>
+      </div>
+
       <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
         <!-- Left Column (2/3) -->
         <div class="lg:col-span-2 space-y-6">
@@ -131,7 +243,7 @@
               <p class="text-white/60 mb-6 max-w-sm">Powerful tools to grow your audience and automate your communications</p>
               <div class="flex flex-wrap gap-4">
                 <button class="bg-white text-primary px-6 py-3 rounded-xl font-semibold hover:bg-gray-100 transition">
-                  Create Campaign
+                  Create Newsletter
                 </button>
                 <button class="border border-white/30 text-white px-6 py-3 rounded-xl font-semibold hover:bg-white/10 transition">
                   Import Contacts
@@ -146,14 +258,14 @@
             </div>
           </section>
 
-          <!-- Active Campaigns Section -->
+          <!-- Active Newsletters Section -->
           <section>
             <div class="flex items-center justify-between mb-6">
-              <h2 class="text-xl font-bold">Active Campaigns</h2>
+              <h2 class="text-xl font-bold">Active Newsletters</h2>
               <a href="#" class="text-muted text-sm hover:text-primary transition">See All</a>
             </div>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
-              <!-- Campaign Card 1 -->
+              <!-- Newsletter Card 1 -->
               <div class="bg-card rounded-2xl p-4 shadow-sm hover:shadow-md transition">
                 <div class="relative mb-4">
                   <div class="aspect-square rounded-xl overflow-hidden relative bg-red-50 flex items-center justify-center">
@@ -176,7 +288,7 @@
                 </div>
               </div>
 
-              <!-- Campaign Card 2 -->
+              <!-- Newsletter Card 2 -->
               <div class="bg-card rounded-2xl p-4 shadow-sm hover:shadow-md transition">
                 <div class="relative mb-4">
                   <div class="aspect-square rounded-xl overflow-hidden relative bg-blue-50 flex items-center justify-center">
@@ -200,7 +312,7 @@
                 </div>
               </div>
 
-              <!-- Campaign Card 3 -->
+              <!-- Newsletter Card 3 -->
               <div class="bg-card rounded-2xl p-4 shadow-sm hover:shadow-md transition hidden sm:block">
                 <div class="relative mb-4">
                   <div class="aspect-square rounded-xl overflow-hidden relative bg-green-50 flex items-center justify-center">
@@ -308,14 +420,14 @@
             </div>
           </section>
 
-          <!-- Recent Campaigns Section -->
+          <!-- Recent Newsletters Section -->
           <section>
             <div class="flex items-center justify-between mb-6">
-              <h2 class="text-xl font-bold">Recent Campaigns</h2>
+              <h2 class="text-xl font-bold">Recent Newsletters</h2>
               <a href="#" class="text-muted text-sm hover:text-primary transition">See All</a>
             </div>
             <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-              <!-- Recent Campaign 1 -->
+              <!-- Recent Newsletter 1 -->
               <div class="bg-card rounded-2xl p-4 flex gap-4 shadow-sm hover:shadow-md transition">
                 <div class="w-24 h-24 bg-gray-100 rounded-xl flex-shrink-0 flex items-center justify-center">
                   <svg class="w-8 h-8 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -344,7 +456,7 @@
                 </div>
               </div>
 
-              <!-- Recent Campaign 2 -->
+              <!-- Recent Newsletter 2 -->
               <div class="bg-card rounded-2xl p-4 flex gap-4 shadow-sm hover:shadow-md transition">
                 <div class="w-24 h-24 bg-gray-100 rounded-xl flex-shrink-0 flex items-center justify-center">
                   <svg class="w-8 h-8 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -494,5 +606,25 @@
       </div>
     </main>
   </div>
+  <script>
+    const notifToggle = document.getElementById('notif-toggle');
+    const notifPanel = document.getElementById('notif-panel');
+
+    function closeNotif() {
+      notifPanel?.classList.add('hidden');
+    }
+
+    notifToggle?.addEventListener('click', (e) => {
+      e.stopPropagation();
+      notifPanel?.classList.toggle('hidden');
+    });
+
+    document.addEventListener('click', (e) => {
+      if (!notifPanel || !notifToggle) return;
+      if (!notifPanel.contains(e.target) && !notifToggle.contains(e.target)) {
+        closeNotif();
+      }
+    });
+  </script>
 </body>
 </html>
